--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -69,3 +69,34 @@ details div {
 	border: 1px solid #ccc;
 	margin-top: 5px;
 }
+
+
+/* 서브페이지 CSS */
+.cardMain {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 50vh;
+}
+
+.cardImages {
+  border-radius: 20%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardStory {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
