--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -103,7 +103,7 @@ details div {
     width: 600px;
     height: 300px;
     margin: 20px auto 20px auto;
-    padding-left: 200px;
+    padding-left: 10%;
 
     display: flex;
     flex-direction: row;
