--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -4,10 +4,10 @@
 }
 
 @font-face {
-    font-family: 'Cafe24Supermagic-Bold-v1.0';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
 }
 
 * {
@@ -41,8 +41,10 @@ body {
 
 .main1 {
 	margin-top: 20px;
+	margin-left: 150px;
 	display: flex;
-	justify-content: space-around;
+	align-items: center;
+	justify-content: space-evenly;
 	padding: 10px;
 	height: 500px;
 	width: 1200px;
@@ -51,7 +53,7 @@ body {
 .main1-right {
 	display: block;
 	width: 500px;
-	margin-left: 50px;
+	margin-left: 100px;
 }
 
 .images {
