--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -53,7 +53,8 @@ body {
 .main1-right {
 	display: block;
 	width: 500px;
-	margin-left: 100px;
+	margin-left: 80px;
+	height: 450px;
 }
 
 .images {
@@ -93,7 +94,6 @@ details div {
 	padding: 10px;
 	background-color: #f0f0f0;
 	border: 1px solid #ccc;
-	margin-top: 5px;
 }
 
 .card-img-top {
