--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -1,6 +1,14 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
+}
+
+@font-face {
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
 }
 
 html {
@@ -44,15 +52,7 @@ a {
 	margin-top: 50px;
 }
 .commentBox {
-	width: 600px;
-	height: 300px;
-	margin: 20px auto 20px auto;
-	padding-left: 200px;
-
-	display: flex;
-	flex-direction: row;
-
-	border: 1px solid black;
+padding-left: 20px;
 }
 
 .CommentInput {
