--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -1,21 +1,26 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
 }
 
 @font-face {
-    font-family: 'Cafe24Supermagic-Bold-v1.0';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
+
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
 }
 
 * {
 	font-family: 'Cafe24Supermagic-Bold-v1.0';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
 }
 
 body {
-	width: 100%;
+	width: 1300px;
 }
 
 .container {
@@ -41,10 +46,31 @@ body {
 
 .main1 {
 	margin-top: 20px;
+	margin-left: 200px;
+	margin-left: 150px;
+
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
+	padding: 10px;
+	height: 500px;
+	width: 1200px;
+	
+}
+
+.main1-left {
+	margin-bottom: 90px;
+	height: 350px;
+	margin-right:50px;
+	display: flex;
+
+}
+
+.main1-right {
+	display: block;
+	width: 500px;
+	margin-left: 80px;
+	height: 450px;
 }
 
 .images {
@@ -54,9 +80,19 @@ body {
 	justify-content: center;
 }
 
+#story img {
+	display: block;
+	height: 250px;
+}
+
 details {
 	font-size: 20px;
 	font-weight: bold;
+}
+
+details .cam {
+	font-size: 15px;
+	font-weight: 800;
 }
 
 details summary {
@@ -74,9 +110,56 @@ details div {
 	padding: 10px;
 	background-color: #f0f0f0;
 	border: 1px solid #ccc;
-	margin-top: 5px;
 }
 
 .card-img-top {
 	height: 45vh;
+}
+
+
+/* 서브페이지 CSS */
+a {
+	text-decoration-line:none;
+}
+
+.cardMain {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 50vh;
+}
+
+.cardImages {
+  border-radius: 20%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardStory {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.commentBox {
+    margin: 20px auto 20px auto;
+    padding-left: 10%;
+
+    display: flex;
+    flex-direction: row;
+
+    border: 1px solid black;
+  }
+
+.CommentInput {
+	margin-left: 20px;
 }
