--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -5,7 +5,6 @@
 }
 
 @font-face {
-
 	font-family: 'Cafe24Supermagic-Bold-v1.0';
 	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
 	font-weight: 700;
@@ -13,7 +12,6 @@
 }
 
 * {
-
 	font-family: 'Cafe24Supermagic-Bold-v1.0';
 	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
 	font-weight: 700;
@@ -54,8 +52,6 @@ body {
 	padding: 10px;
 	height: 500px;
 	width: 1200px;
-
-	
 }
 
 .main1-left {
@@ -72,6 +68,10 @@ body {
 	height: 450px;
 }
 
+.main1 #summary-color:hover {
+	color: slateblue;
+}
+
 .images {
 	margin: 50px auto 0px auto;
 	display: flex;
@@ -86,7 +86,7 @@ body {
 
 details {
 	font-size: 20px;
-	font-weight:bold;
+	font-weight: bold;
 }
 
 details .cam {
@@ -113,82 +113,76 @@ details div {
 
 .card-img-top {
 	height: 45vh;
-<<<<<<< HEAD
 }
-=======
-}
-<<<<<<< HEAD
 
 /* 서브페이지 CSS */
 a {
-	text-decoration-line:none;
+	text-decoration-line: none;
 }
 
 .cardMain {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 50vh;
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	height: 50vh;
 }
 
 .cardImages {
-  border-radius: 20%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+	border-radius: 20%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .cardStory {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-
-<<<<<<< HEAD
 
 /* 서브페이지 CSS */
 a {
-	text-decoration-line:none;
+	text-decoration-line: none;
 }
 
 .cardMain {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 50vh;
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	height: 50vh;
 }
 
 .cardImages {
-  border-radius: 20%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+	border-radius: 20%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .cardStory {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .comment {
-  width: 1200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+	width: 1200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 50px;
 }
 .commentBox {
-    margin: 20px auto 20px auto;
-    padding-left: 10%;
+	margin: 20px auto 20px auto;
+	padding-left: 10%;
 
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 
-    border: 1px solid black;
-  }
+	border: 1px solid black;
+}
 
 .CommentInput {
 	margin-left: 20px;
