--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -19,11 +19,14 @@
 }
 
 body {
-	width: 1300px;
+	width: 100%;
 }
 
 .container {
-	margin-left: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	font-family: 'Ubuntu', sans-serif;
 }
 
@@ -45,7 +48,7 @@ body {
 
 .main1 {
 	margin-top: 20px;
-	margin-left: 200px;
+	margin-left: 180px;
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
@@ -89,14 +92,10 @@ details {
 	font-weight: bold;
 }
 
-details .cam {
-	font-size: 15px;
-	font-weight: 800;
-}
-
 details summary {
 	list-style: none;
 	cursor: pointer;
+	font-size: 25px;
 }
 
 details summary::before {
@@ -142,6 +141,7 @@ a {
 }
 
 /* 서브페이지 CSS */
+/*
 a {
 	text-decoration-line: none;
 }
@@ -186,4 +186,4 @@ a {
 
 .CommentInput {
 	margin-left: 20px;
-}
+} */
