--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -32,7 +32,8 @@ a {
 }
 
 .cardMain #photo {
-	border: 2px solid #fff;
+	border: 1px solid #fff;
+	box-shadow: 0 0 10px 0 #fff;
 }
 
 .cardImages {
