--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -38,6 +38,7 @@ body {
 	font-size: 50px;
 	color: #fff;
 	padding-bottom: 20px;
+	text-shadow: 3px 4px 5px black;
 }
 
 .photo-title {
@@ -57,6 +58,7 @@ body {
 .main1-right {
 	width: 360px;
 	height: 446px;
+	text-shadow: 3px 4px 5px #111;
 }
 
 .main1-right summary:hover {
