--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -26,7 +26,7 @@ a {
 
 .cardMain {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	width: 100%;
 	height: 50vh;
 }
@@ -41,6 +41,8 @@ a {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	width: 400px;
+	height: 550px;
 }
 
 .cardStory {
@@ -77,7 +79,13 @@ p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 50px;
+	margin: 30px auto 30px auto;
+	padding: 100px;
+}
+
+.comment .row .col-auto button {
+	margin: 3px;
+	width: 65px;
 }
 .commentBox {
 	padding-left: 20px;
