--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -11,20 +11,20 @@
 	font-style: normal;
 }
 
-body {
-	width: 100%;
-	background: linear-gradient(40deg, rgb(229, 197, 233), rgb(25, 71, 75), #15194e);
+* {
+	font-family: 'Cafe24Supermagic-Bold-v1.0';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
 }
+
+body {
+	width: 1300px;
+}
+
 .container {
 	margin-left: 20px;
 	font-family: 'Ubuntu', sans-serif;
-	height: 100vh;
-	box-shadow: 0 0 30px 0 black;
-	border-radius: 10px;
-}
-
-.wrap-top {
-	padding-top: 30px;
 }
 
 #team-title {
@@ -36,9 +36,6 @@ body {
 	margin-bottom: 50px;
 	font-weight: 800;
 	font-size: 50px;
-	color: #fff;
-	padding-bottom: 20px;
-	text-shadow: 3px 4px 5px black;
 }
 
 .photo-title {
@@ -48,21 +45,31 @@ body {
 
 .main1 {
 	margin-top: 20px;
+	margin-left: 200px;
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
-	color: #fff;
+	padding: 10px;
+	height: 500px;
+	width: 1200px;
+}
+
+.main1-left {
+	margin-bottom: 90px;
+	height: 350px;
+	margin-right: 50px;
+	display: flex;
 }
 
 .main1-right {
-	width: 360px;
-	height: 446px;
-	text-shadow: 3px 4px 5px #111;
+	display: block;
+	width: 500px;
+	margin-left: 80px;
+	height: 450px;
 }
 
-.main1-right summary:hover {
-	color: #999;
+.main1 #summary-color:hover {
+	color: slateblue;
 }
 
 .images {
@@ -72,39 +79,19 @@ body {
 	justify-content: center;
 }
 
-#story {
-	padding-top: 100px;
-}
-
 #story img {
 	display: block;
 	height: 250px;
 }
 
-#story div .col {
-	border-radius: 30px;
-}
-
-/* hover 음영 좀 더 넓게 */
-#story div .col:hover {
-	box-shadow: 0 0 5px 0 #fff;
-}
-
-#story div .col:hover {
-	box-shadow: 0 0 10px 0 #fff;
-}
-
-#story div .col:hover {
-	box-shadow: 0 0 20px 0 #fff;
-}
-
-#story div .col:hover {
-	box-shadow: 0 0 30px 0 #fff;
-}
-
 details {
 	font-size: 20px;
 	font-weight: bold;
+}
+
+details .cam {
+	font-size: 15px;
+	font-weight: 800;
 }
 
 details summary {
@@ -122,9 +109,81 @@ details div {
 	padding: 10px;
 	background-color: #f0f0f0;
 	border: 1px solid #ccc;
-	margin-top: 5px;
 }
 
 .card-img-top {
 	height: 45vh;
+}
+
+/* 서브페이지 CSS */
+a {
+	text-decoration-line: none;
+}
+
+.cardMain {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	height: 50vh;
+}
+
+.cardImages {
+	border-radius: 20%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.cardStory {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+/* 서브페이지 CSS */
+a {
+	text-decoration-line: none;
+}
+
+.cardMain {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	height: 50vh;
+}
+
+.cardImages {
+	border-radius: 20%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.cardStory {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.comment {
+	width: 1200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 50px;
+}
+.commentBox {
+	margin: 20px auto 20px auto;
+	padding-left: 10%;
+
+	display: flex;
+	flex-direction: row;
+
+	border: 1px solid black;
+}
+
+.CommentInput {
+	margin-left: 20px;
 }
