--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -21,7 +21,7 @@ body {
 	height: 100vh;
 	box-shadow: 0 0 30px 0 black;
 	border-radius: 10px;
-	padding-bottom: 950px;
+	padding-bottom: 70%;
 	margin-bottom: 20px;
 }
 
