--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -60,6 +60,7 @@ a {
 	align-items: center;
 	color: #fff;
 	text-shadow: 3px 4px 5px #111;
+	margin-top: 250px;
 }
 
 p {
@@ -86,7 +87,8 @@ p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 50px auto 30px auto;
+	margin: 320px auto 50px auto;
+	
 }
 
 .comment-wrap .row #comment {
@@ -99,10 +101,16 @@ p {
 	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
 }
 
+.commentBox {
+	margin: 50px;
+	
+}
+
 .commentBox #card {
 	position: relative;
-	margin: 20px;
+	margin: 5	0px;
 	word-break: break-all;
+
 	border-radius: 8px;
 	display: flex;
 	flex-direction: column;
@@ -111,6 +119,7 @@ p {
 }
 .commentBox #card .col {
 	width: 1000px;
+
 }
 
 .commentBox #card .col .card-body {
