--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -134,9 +134,11 @@ p {
 }
 .commentBox #card .col {
 	width: 1000px;
+	
 
 }
 
 .commentBox #card .col .card-body {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+	background-color: #e8e8e8 ;
 }
