storyCard2,3 페이지 블로그 깃헙링크 글자 색 변경

--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -86,11 +86,11 @@ p {
 }
 
 .cardStory a:link:hover {
-	color: lightgray;
+	color: #333333;
 }
 
 .cardStory a:visited {
-	color: antiquewhite;
+	color: #333333;
 }
 
 .comment-wrap {
