--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -26,7 +26,7 @@ body {
 	font-family: 'Ubuntu', sans-serif;
 	box-shadow: 0 0 30px 0 black;
 	border-radius: 10px;
-	padding-bottom: 70%;
+	padding-bottom: 10px;
 	margin-bottom: 20px;
 }
 
@@ -65,7 +65,6 @@ body {
 .main1-right {
 	width: 380px;
 	height: 490px;
-	text-shadow: 0px 1px 2px #222;
 }
 
 .main1-right summary:hover {
