--- a/team_stage/sub.css
+++ b/team_stage/sub.css
@@ -17,7 +17,7 @@ body {
 
 #back {
 	font-size: 25px;
-	color: #fff;
+	color: #333333;
 	margin-left: 10px;
 }
 
@@ -78,7 +78,6 @@ p {
 /*블로그, 깃허브 링크 걸기 추가 및 색상 변경*/
 .cardStory a {
 	font-size: 20px;
-	
 }
 
 .cardStory a:link {
@@ -126,14 +125,25 @@ p {
 }
 .commentBox #card .col {
 	width: 1000px;
-	
 }
 
 .commentBox #card .col .card-body {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-	background-color: #e8e8e8 ;
+	background-color: #e8e8e8;
 	background-color: #4d648d;
 	color: #cee8ff;
+}
+
+.commentBox #card .col .card-body .edit-btn {
+	background-color: #926b6a;
+	color: #fff;
+	border: none;
+}
+
+.commentBox #card .col .card-body .delete-btn {
+	background-color: #d6d5d5;
+	color: #926b6a;
+	border: none;
 }
 
 .col-auto button {
@@ -146,7 +156,25 @@ p {
 	border: none;
 }
 
-.col-auto button:focus   {
+.col-auto button:focus {
 	background-color: #926b6a;
+	border: none;
+}
+
+.double-check-btn {
+	background-color: #927170;
+	color: #fff;
+	border: none;
+}
+
+.apply-btn {
+	background-color: #856564;
+	color: #fff;
+	border: none;
+}
+
+.cancel-btn {
+	background-color: #d6d5d5;
+	color: #926b6a;
 	border: none;
 }
